--- a/src/components/pages/news-page/root-comment/root-comment.css
+++ b/src/components/pages/news-page/root-comment/root-comment.css
@@ -31,14 +31,18 @@
     display: flex;
     align-items: center;
     width: 30%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     opacity: 0.6;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .comment__time {
-    justify-content: end;
+    display: block;
+    width: 30%;
+    white-space: nowrap;
+    text-align: right;
+    margin: auto 0px;
 }
 
 
@@ -61,12 +65,11 @@
 }
 
 .comment__button {
-    width: 20%;
+    width: 40%;
     border: none;
     outline: none;
     background: inherit;
     border-radius: 12px;
-    padding: 10px 40px;
     transition: 0.2s;
     cursor: pointer;
     color: #0466c8;
@@ -94,4 +97,28 @@
     left: 0px;
     width: 3px;
     background-color: #001233;
+}
+
+@media (max-width: 730px) {
+    .comment__footer {
+        flex-direction: column;
+        align-items: center;
+    }
+    .comment__button {
+        width: 100%;
+    }
+    .comment__time, .comment__by {
+        width: 100%;
+        justify-content: center;
+    }
+    .comment__time {
+        display: flex;
+    }
+}
+
+@media (max-width: 440px) {
+    .comment__time {
+        display: block;
+        text-align: center;
+    }
 }
