--- a/src/components/pages/news-page/page-state/page-state.css
+++ b/src/components/pages/news-page/page-state/page-state.css
@@ -8,7 +8,7 @@
 .comment__title-preload {
     display: inline-block;
     height: 40px;
-    width: 300px;
+    width: 60%;
     border-radius: 12px;
     background-color: #4a4e69;
 }
