--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,7 +4,9 @@
 
 .header {
     position: fixed;
-    top: 0; left: 0; right: 0;
+    top: 0;
+    left: 0;
+    right: 0;
     box-shadow: 0px 2px 6px #d9d9d9;
     background: white;
     z-index: 1;
@@ -24,9 +26,20 @@
     align-items: center;
 }
 
+.error__icon {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 40%;
+}
+
 .footer {
     position: absolute;
-    bottom: 0; right: 0; left: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     background: white;
     box-shadow: 0px -2px 6px #d9d9d9;
     display: flex;
@@ -41,5 +54,17 @@
 @media (max-width: 680px) {
     .main {
         padding: 70px 20px;
+    }
+}
+
+@media (max-width: 590px) {
+    .error__icon {
+        width: 100%;
+    }
+}
+
+@media (max-width: 400px) {
+    .error__icon {
+        height: 30%;
     }
 }
