--- a/src/components/pages/news-page/news-page.css
+++ b/src/components/pages/news-page/news-page.css
@@ -14,6 +14,12 @@
     margin-bottom: 10px;
 }
 
+.news__error-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .news__main-info {
     width: 100%;
     display: flex;
